# Manning-Deploying-A-Deep-Learning-Model-On-Web-And-Mobile-Applications

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py  inference.py  test_api.py  test_e2e.py  test_inference.py
backend/assets/: classes.json
backend/assets/model_tfjs/: model.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  test-setup.ts
mobile/: AboutScreen.tsx  App.tsx  HomeScreen.tsx  ModelService.ts  app.json  config.tsx  metro.config.js  package-lock.json  package.json
mobile/mobile/: HomeScreen.tsx  ModelService.ts
